# Rename

./: .env.example  Aptfile  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  patch_bar.py  patch_flow5.py  patch_lookup.py  patch_process3.py  patch_quota_msg.py  plan2.md  plan3.md  pyproject.toml  render.yaml  requirements.txt  run_test.py  update_readme.py
.github/workflows/: ci.yml
plugins/: __init__.py  admin.py  admin_users.py  broadcast.py  debug.py  flow.py  force_sub_handler.py  inline.py  myfiles.py  payments.py  premium.py  process.py  public_cmds.py  start.py  xtv_pro_setup.py
tools/: AudioMetadataEditor.py  FileConverter.py  ImageWatermarker.py  SubtitleExtractor.py
utils/: XTVcore.py  archive.py  auth.py  currency.py  detect.py  ffmpeg_tools.py  gate.py  log.py  logger.py  progress.py  queue_manager.py  state.py  tmdb.py
